updated fonts for all known pages also resolved some spacing issues

--- a/front-end-workspace/protec-angular-workspace/projects/protec/src/app/shared/components/g-button/g-button.component.scss
+++ b/front-end-workspace/protec-angular-workspace/projects/protec/src/app/shared/components/g-button/g-button.component.scss
@@ -94,13 +94,12 @@
 }
 
 .footer-nav-link {
-    font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-bold) 12px/15px var(--unnamed-font-family-dosis);
     color: var(--light-mint);
     text-align: center;
-    font: normal normal bold 12px/15px Dosis;
     letter-spacing: 3.6px;
     text-transform: uppercase;
     opacity: 1;
+
 }
 
 .footer-nav-link:hover{
